--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -3,11 +3,11 @@
 
 @import "./components/all";
 
-body{
+body {
   background-color: $background;
 }
 
-.wrapper{
+.wrapper {
   width: calc(100vw - 100px);
   height: 100%;
   background-color: #fff;
@@ -16,7 +16,31 @@ body{
   max-width: 1400px;
 }
 
-.container{
+.content {
+  padding: 40px 0;
+
+  &__title {
+    font-weight: 800;
+    font-size: 38px;
+    margin-top: 60px;
+    margin-bottom: 50px;
+  }
+
+  &__items {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    grid-column-gap: 11px;
+  }
+
+  &__top{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
+.container {
   width: $container-width;
   margin: 0 auto;
 }
