--- a/src/scss/components/_staff-blocks.scss
+++ b/src/scss/components/_staff-blocks.scss
@@ -2,6 +2,7 @@
 
 .staff-block {
   width: 280px;
+
   text-align: center;
   margin-bottom: 65px;
 
@@ -10,11 +11,14 @@
   }
 
   &__image {
-    width: 10%;
+    width: 280px;
+    height: 280px;
+    object-fit: cover;
   }
 
   &__title {
     font-size: 20px;
+    margin-top: 10px;
     font-weight: 900;
     letter-spacing: 1%;
     margin-bottom: 20px;
