--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -88,6 +88,7 @@ body {
       width: 30px;
       height: 30px;
       margin-right: 10px;
+
       path {
         stroke: $black;
         stroke-width: 1.9;
@@ -120,6 +121,7 @@ body {
           stroke: darken($color: #b6b6b6, $amount: 50);
         }
       }
+
       span {
         color: darken($color: #b6b6b6, $amount: 50);
       }
@@ -245,6 +247,7 @@ body {
           height: 11.5px;
           position: relative;
         }
+
         &:hover,
         &:active {
           border-color: darken($color: $gray-line, $amount: 80);
@@ -302,6 +305,7 @@ body {
 
         svg {
           margin-right: 12px;
+
           path {
             fill: transparent;
             stroke-width: 2;
@@ -353,6 +357,22 @@ body {
       margin: 0 auto;
       font-weight: 600;
       font-size: 18px;
+    }
+  }
+
+  &__form {
+    display: flex;
+    margin-top: 20px;
+    align-items: center;
+
+    span {
+      color: red;
+    }
+
+    &-btn {
+      font-weight: 600;
+      font-size: 16px;
+      color: #fff;
     }
   }
 }
